# AquesTalk-python

./: .gitignore  README.md  setup.cfg
aquestalk/: __init__.py  aquestalk.py
aquestalk/r1/: AqLicence.txt
