[metadata]
name = AquesTalk-python
version = 1.0
description = Python Wrapper for AquesTalk (Old License)
long_description = file: README.md, LICENSE.txt
license = GNU General Public License v3
author = Na-x4
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Natural Language :: Japanese
    Topic :: Multimedia :: Sound/Audio :: Speech

[options]
packages = find:

[options.package_data]
* = */AquesTalk.dll, */AqLicence.txt, */AqLicense.txt
