[metadata]
name = AquesTalk-python
version = 1.1
url = https://github.com/Na-x4/AquesTalk-python
description = Python Wrapper for AquesTalk (Old License)
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3
author = Na-x4
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Natural Language :: Japanese
    Topic :: Multimedia :: Sound/Audio :: Speech

[options]
packages = find:

[options.package_data]
* = */AquesTalk.dll, */AqLicence.txt, */AqLicense.txt
